maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:2: error: not found: value keepHandOnSideWall
	if (keepHandOnSideWall()) {
            ^Escaper:11: error: not found: value keepHandOnSideWall
 keepHandOnSideWall() {
 ^