maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	if (keepHandOnSideWall()) {
		if (estFaceMur()) gauche();
		else avance();
	}
	else {
		droite();
		avance();
	}
}
 keepHandOnSideWall() {
 	droite();
 	var flag = estFaceMur();
 	gauche();
 	return flag;
 }
